Refactor: replace `newInstance` with `getDeclaredConstructor().newInstance` for better reflection handling and add detailed error logging in `AppInitializer`